@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<form>
+    <label name="country_code"/>
+    <field name="country_code"/>
+    <label name="active"/>
+    <field name="active"/>
+    <separator name="types" colspan="4"/>
+    <field name="types" colspan="4"/>
+</form>
